<resources>
    <string name="app_name">CocktailApp</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="main_image">main image</string>
    <string name="add_your_first_cocktail_here">Add your first \ncocktail here</string>
    <string name="cocktail_title">Cocktail title</string>
    <string name="image_edit">imageEdit</string>
    <string name="title">Title</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="description">Description</string>
    <string name="recipe">Recipe</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_ingredients">Add ingredients</string>
    <string name="add">Add</string>
    <string name="ingredient">Ingredient</string>
    <string name="edit">Edit</string>
    <string name="recipe_title">Recipe:</string>
    <string name="delete">Delete</string>
    <string name="add_title">Add title</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="yes">Yes</string>
    <string name="dialog_delete_the_recipe">Are you sure you want to delete the recipe?</string>
    <string name="confirm_action">Confirm action</string>
    <string name="no">No</string>
    <string name="share_cocktails">Share cocktails</string>
    <string name="share_message">See what cocktails I created in the Cocktail Bar app!\n%1$s and others\nDo you want to try it?</string>
</resources>