<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.main.MainFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mainTitle"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/my_cocktails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addFirstCocktailImage" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/share_image_view"
        android:layout_width="@dimen/corner_button_size"
        android:layout_height="@dimen/corner_button_size"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="36dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/share_cocktails"
        android:backgroundTint="@color/blue_lite"
        android:src="@drawable/ic_share"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/no_cocktails_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="addFirstCocktailImage, addFirstCocktailTextView, addFirstCocktailArrow"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/addFirstCocktailImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/main_image"
        android:src="@drawable/summer_girl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addFirstCocktailTextView"
        style="@style/Text.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/base_padding_big"
        android:gravity="center"
        android:lines="2"
        android:text="@string/add_your_first_cocktail_here"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/addFirstCocktailArrow"
        app:layout_constraintEnd_toEndOf="@+id/mainTitle"
        app:layout_constraintStart_toStartOf="@+id/mainTitle"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle"
        app:layout_constraintVertical_bias="0.137" />

    <ImageView
        android:id="@+id/addFirstCocktailArrow"
        android:layout_width="9dp"
        android:layout_height="34dp"

        android:layout_marginBottom="116dp"
        android:backgroundTint="@color/gray_200"
        android:src="@drawable/arrow_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/addFirstCocktailTextView"
        app:layout_constraintStart_toStartOf="@+id/addFirstCocktailTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottomappbar_height"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:backgroundTint="?attr/colorPrimarySurface"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:fabCradleRoundedCornerRadius="0dp"
        app:fabCradleMargin="8dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addButton"
        style="@style/MainFabStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabCustomSize="@dimen/fab_size"
        app:layout_anchor="@id/bottomAppBar"
        android:clickable="true"
        app:backgroundTint="@color/blue_lite"
        app:srcCompat="@drawable/plus"
        app:tint="@color/white" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>